--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 }
 
 body{
+    margin: 4%;
     background-color:#FBF7EC ;
 }
 
@@ -19,17 +20,22 @@ a{
     font-variant: small-caps;
 }
 
-section{
+div{
+    display: inline-block;
+    width:70%;
     color:#2A2B2E;
     font-family: "baskerville";
     text-align: justify;
     line-height: 150%;
+    float:left;
+    margin-left: 4%;
 }
 
 h1{
     font-size: 500%;
     text-align: center;
     line-height: 20%;
+    margin: 5% 21.5% 4% 0%;
 }
 
 h2{
@@ -40,10 +46,11 @@ h2{
 }
 
 nav{
-    display:table-cell;
+    display:inline-block;
     height: 100%;
-    width: 20%;
+    width: 15%;
     float:right;
+    margin:0;
 }
 
 section{
