--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    margin: 4%;
+    margin: 80px 4% 0 4%;
     background-color:#FBF7EC ;
 }
 
@@ -13,7 +13,6 @@ header{
     color:#2A2B2E;
     font-family: "baskerville";
     text-align: justify;
-    line-height: 150%;
 }
 
 a{
@@ -22,39 +21,57 @@ a{
 }
 
 div{
-    display: inline-block;
     width:70%;
     color:#2A2B2E;
     font-family: "baskerville";
     text-align: left;
-    line-height: 150%;
+    line-height: 25px;
     float:left;
-    margin-left: 4%;
+    margin:0 0 0 4%;
 }
 
 h1{
-    font-size: 500%;
+    font-size: 100px;
     text-align: center;
-    line-height: 20%;
-    margin: 5% 21.5% 4% 0%;
+    line-height: 20px;
+    margin: 40px 0 40px 0;
+    font-variant: none;
 }
 
 h2{
     font-variant: small-caps;
-    font-size: 250%;
-    text-align: center;
-    line-height: 10%;
+    font-size: 40px;
+    margin: 40px 0 40px 0;
 }
 
 nav{
-    display:inline-block;
-    height: 100%;
-    width: 15%;
     float:right;
-    margin:0;
+    width: 18%;
 }
 
 #img{
+    text-decoration: none;
+    color:#2A2B2E;
+}
+
+li{
+    margin: 10px 0 10px 0;
+}
+
+#link-1Post{
+    width:90%;
+    margin: 40px 0 0 4%;
+}
+
+#Foto-Home{
+    width: 90%;
+    margin: 40px 0 0 4%;
+    clear: both;
+}
+
+.linkHome{
+    text-align: center;
+    font-size: 40px;
     text-decoration: none;
     color:#2A2B2E;
 }
