--- a/css/contactstyle.css
+++ b/css/contactstyle.css
@@ -4,21 +4,13 @@
     float: left;;
 }
 
-img{
-    width: 40px;
-}
-
 section{
     margin: 80px 0 0 4%;
     float: left;
 }
 
-img,figcaption{
+figcaption{
     margin: 0 0 0 4;
     display: inline-block;
     vertical-align: middle;
-}
-
-#s{
-    text-decoration: none;
 }
